--- a/DotNetCoreSqlDb/Views/Todos/Index.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DotNetCoreSqlDb.Models.Todo>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Current Todo List";
 }
 
 <h1>Index</h1>
