--- a/DotNetCoreSqlDb/Views/Todos/Index.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Current Todo List";
 }
 
-<h1>ViewData.Title</h1>
+<h1>@ViewData.Title</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
