Edit Index header

--- a/DotNetCoreSqlDb/Views/Todos/Index.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<DotNetCoreSqlDb.Models.Todo>
+@model IEnumerable<DotNetCoreSqlDb.Models.Todo>
 
 @{
     ViewData["Title"] = "Current Todo List";
 }
 
-<h1>@ViewData</h1>
+<h1>Current Todo List</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
